--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,14 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.7.7",
-        "client": "file:",
-        "framer-motion": "^11.3.31",
+        "framer-motion": "^11.5.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.26.1",
         "react-scripts": "5.0.1",
         "redux": "^5.0.1",
+        "tailwindcss": "^3.4.10",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -41,8 +41,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "tailwindcss": "^3.4.10"
     }
 }
