--- a/server/package.json
+++ b/server/package.json
@@ -6,19 +6,17 @@
     "scripts": {
         "start": "nodemon index.js"
     },
-    "author": "",
+    "author": "Rakesh Rana",
     "license": "ISC",
     "description": "",
     "dependencies": {
         "bcryptjs": "^2.4.3",
-        "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
-        "express": "^4.19.2",
+        "express": "^4.21.0",
         "jsonwebtoken": "^9.0.2",
-        "mysql2": "^3.11.0",
+        "mysql2": "^3.11.2",
         "nodemon": "^3.1.4",
-        "server": "file:",
         "uuid": "^10.0.0"
     }
 }
